# repodoc

./: .gitignore  README.md  prompt_plan.md  pyproject.toml  pytest.ini  spec.md  todo.md
docs/: README.md  api-docs.md  architecture.md  user-manual.md
src/repodoc/: chunker.py  cli.py  config.py  errors.py  logging.py  ollama.py  parser.py  writer.py
src/repodoc/generators/: __init__.py  api.py  architecture.py  base.py  manual.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_cli_baseline.py  test_config.py  test_errors.py  test_generators.py  test_ollama.py  test_parser.py  test_writer.py
